--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
-  "name": "soundcloud-rpc",
-  "version": "0.0.7",
-  "description": "🎵 A Soundcloud client with Discord Rich Presence support",
+  "name": "soundcloud",
+  "version": "0.1.0",
+  "description": "SoundCloud",
   "author": {
     "name": "Richard Habitzreuter",
     "email": "richardhabitzreuter@icloud.com"
   },
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "dev": "tsc && electron ./tsc/main.js",
-    "build": "tsc && electron-builder --dir",
-    "build-win": "tsc && electron-builder -w nsis",
-    "build-win-ptb": "tsc && electron-builder -w portable",
-    "build-mac": "tsc && electron-builder -m dmg",
-    "build-linux-deb": "tsc && electron-builder -l deb",
-    "build-linux-appimage": "tsc && electron-builder -l appimage"
+    "start": "npm run build && electron ./tsc/main.js",
+    "dist": "npm run build && electron-builder --dir",
+    "dist-win": "npm run build && electron-builder -w nsis",
+    "dist-mac": "npm run build && electron-builder -m dmg",
+    "dist-linux-deb": "npm run build && electron-builder -l deb",
+    "dist-linux-appimage": "npm run build && electron-builder -l appimage"
   },
   "main": "./tsc/main.js",
-  "repository": "https://github.com/richardhbtz/soundcloud-rpc",
-  "publish": {
-    "provider": "github",
-    "releaseType": "release"
-  },
   "build": {
-    "appId": "com.richardhbtz.soundcloud-rpc",
+    "appId": "com.sevcator.soundcloud.app",
     "productName": "SoundCloud",
     "asar": true,
     "files": [
       "tsc/**/*"
     ],
     "directories": {
-      "output": "build"
+      "output": "dist"
     },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icons/soundcloud-mac.icns",
-      "artifactName": "soundcloud-${version}-mac.${ext}"
-    },
+    "extraFiles": [
+      "soundcloud.png"
+    ],
     "win": {
       "target": "nsis",
-      "icon": "assets/icons/soundcloud-win.ico",
-      "artifactName": "soundcloud-${version}-installer-win.${ext}"
-    },
-    "linux": {
-      "target": "AppImage",
-      "artifactName": "soundcloud-${version}-installer-linux.${ext}"
+      "icon": "soundcloud-win.ico",
+      "artifactName": "soundcloud-rpc-installer-win.${ext}",
+      "nsis": {
+        "oneClick": false,
+        "allowToChangeInstallationDirectory": true,
+        "include": "build/installer.nsh"
+      }
     }
   },
   "devDependencies": {
@@ -66,7 +61,6 @@
     "discord-rpc": "^4.0.1",
     "electron-localshortcut": "^3.2.1",
     "electron-prompt": "^1.7.0",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.3.4"
+    "electron-store": "^8.1.0"
   }
 }
